[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
          "D200", "D205", "D400", "D401", "D402", "D403", "D412"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
